# fast-api-todoapi-poc

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
src/: config.py  db_connection_test.py  main.py
src/api/v1/: auth_routes.py  models.py  todo_routes.py
src/core/applications/commands/: create_todo.py  delete_todo.py  update_todo.py
src/core/applications/interfaces/: event_bus.py  repositories.py
src/core/applications/queries/: get_todo.py  list_todos.py
src/core/domain/entities/: todo.py
src/core/domain/events/: todo_created_event.py
src/core/domain/value_objects/: Permission.py  priority.py  roles.py
src/infrastructure/authentication/: auth_utils.py  security.py
src/infrastructure/database/: database.py  models.py  seed.py
src/infrastructure/database/migrations/: env.py
src/infrastructure/database/migrations/versions/: 0ce652307cd5_add_roles_and_permissions_to_user_model.py  2f656ce5acb8_create_todos_table.py  7c83c255621b_add_user_to_todos.py  af1bd5fb7b4f_add_tags_for_todos.py
src/infrastructure/event_bus/: redis_event_bus.py
src/infrastructure/logging/: logger.py
src/infrastructure/repositories/: todo_repository.py
