[project]
name = "todo-poc"
version = "0.1.0"
description = "Todo FastApi POC"
authors = [
    {name = "Stanley-Kemuel Lloyd Salvation",email = "skemuel007@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic (>=1.16.2,<2.0.0)",
    "annotated-types (>=0.7.0,<0.8.0)",
    "anyio (>=4.9.0,<5.0.0)",
    "build (>=1.2.2.post1,<2.0.0)",
    "cachecontrol (>=0.14.3,<0.15.0)",
    "certifi (>=2025.6.15,<2026.0.0)",
    "cffi (>=1.17.1,<2.0.0)",
    "charset-normalizer (>=3.4.2,<4.0.0)",
    "click (>=8.2.1,<9.0.0)",
    "cryptography (>=45.0.5,<46.0.0)",
    "distlib (>=0.3.9,<0.4.0)",
    "dulwich (>=0.23.1,<0.24.0)",
    "ecdsa (>=0.19.1,<0.20.0)",
    "fastapi (>=0.115.14,<0.116.0)",
    "fastjsonschema (>=2.21.1,<3.0.0)",
    "filelock (>=3.18.0,<4.0.0)",
    "findpython (>=0.7.0,<0.8.0)",
    "h11 (>=0.16.0,<0.17.0)",
    "httpcore (>=1.0.9,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "idna (>=3.10,<4.0)",
    "iniconfig (>=2.1.0,<3.0.0)",
    "installer (>=0.7.0,<0.8.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "jaraco-classes (>=3.4.0,<4.0.0)",
    "jaraco-context (>=6.0.1,<7.0.0)",
    "jaraco-functools (>=4.2.1,<5.0.0)",
    "keyring (>=25.6.0,<26.0.0)",
    "mako (>=1.3.10,<2.0.0)",
    "markupsafe (>=3.0.2,<4.0.0)",
    "more-itertools (>=10.7.0,<11.0.0)",
    "msgpack (>=1.1.1,<2.0.0)",
    "packaging (>=25.0,<26.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "pbs-installer (>=2025.7.2,<2026.0.0)",
    "pkginfo (>=1.12.1.2,<2.0.0.0)",
    "platformdirs (>=4.3.8,<5.0.0)",
    "pluggy (>=1.6.0,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pyasn1 (>=0.6.1,<0.7.0)",
    "pycparser (>=2.22,<3.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pygments (>=2.19.2,<3.0.0)",
    "pyproject-hooks (>=1.2.0,<2.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "pytest-asyncio (>=1.0.0,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "rapidfuzz (>=3.13.0,<4.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "requests-toolbelt (>=1.0.0,<2.0.0)",
    "shellingham (>=1.5.4,<2.0.0)",
    "six (>=1.17.0,<2.0.0)",
    "sniffio (>=1.3.1,<2.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "tomlkit (>=0.13.3,<0.14.0)",
    "trove-classifiers (>=2025.5.9.12,<2026.0.0.0)",
    "typing-inspection (>=0.4.1,<0.5.0)",
    "typing-extensions (>=4.14.1,<5.0.0)",
    "urllib3 (>=2.5.0,<3.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "virtualenv (>=20.31.2,<21.0.0)",
    "xattr (>=1.1.4,<2.0.0)",
    "zstandard (>=0.23.0,<0.24.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
